--- a/.envrc
+++ b/.envrc
@@ -1,16 +1,20 @@
 #
-# Bootstrap additional requirements for our infrastructure
-#
-# POC, ideally this should all land in `tft-admin init` later on
+# Direnv setup script
 #
 
-#
-# What this script does?
-#
-# 1. Sets up PATH in venv's activate script to use tools from ``tools/`` directory
-#
-# 2. Configures kubectl so it finds all plugins we use
-#
+layout_poetry() {
+  if [[ ! -f pyproject.toml ]]; then
+    log_error 'No pyproject.toml found. Use `poetry new` or `poetry init` to create one first.'
+    exit 2
+  fi
+
+  # create venv if it doesn't exist
+  poetry run true
+
+  export VIRTUAL_ENV=$(poetry env info --path)
+  export POETRY_ACTIVE=1
+  PATH_add "$VIRTUAL_ENV/bin"
+}
 
 #
 # vars
@@ -31,6 +35,11 @@ warn() { echo -e "\e[33m[+] $@\e[0m"; }
 
 info "Checking for vault password"
 [ -e "$PROJECT_ROOT/.vault_pass" ] || error "Please create '.vault_pass' in project root '$PROJECT_ROOT'"
+
+#
+# Setup poetry layout
+#
+layout_poetry
 
 #
 # install all requirements via poetry
