--- a/.envrc
+++ b/.envrc
@@ -55,7 +55,7 @@ mkdir -p tools/bin
 # download kubectl
 #
 if [ ! -e "$PROJECT_ROOT/tools/bin/kubectl" ]; then
-    info "Downloading kubectl 1.15"
+    info "downloading kubectl 1.15"
     curl -Lo $PROJECT_ROOT/tools/bin/kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.15.10/2020-02-22/bin/linux/amd64/kubectl
     chmod +x $PROJECT_ROOT/tools/bin/kubectl
 fi
@@ -64,7 +64,7 @@ fi
 # download helm
 #
 if [ ! -e "$PROJECT_ROOT/tools/bin/helm" ]; then
-    info "Downloading helm 3.2.1"
+    info "downloading helm 3.2.1"
     TEMPDIR=$(mktemp -d)
     curl -Lo $TEMPDIR/helm.tar.gz https://get.helm.sh/helm-v3.2.1-linux-amd64.tar.gz
     tar -xvC $TEMPDIR -f $TEMPDIR/helm.tar.gz
@@ -77,7 +77,7 @@ fi
 #
 if [ "$(command -v kubectl 2>/dev/null)" != "$PROJECT_ROOT/tools/kubectl" ]; then
 
-    info "Set up kubectl, krew and some nice plugins"
+    info "kubectl, krew and some nice plugins"
 
     # download and install krew
     if [ ! -e "$PROJECT_ROOT/tools/bin/krew" ]; then
@@ -85,7 +85,7 @@ if [ "$(command -v kubectl 2>/dev/null)" != "$PROJECT_ROOT/tools/kubectl" ]; the
         export PATH=$PROJECT_ROOT/tools/.krew/bin:$PATH
         export PATH=$PROJECT_ROOT/tools/bin:$PATH
 
-        info "Downloading and installing krew"
+        info "downloading and installing krew"
         TEMPDIR=$(mktemp -d)
         curl -Lo $TEMPDIR/krew.tar.gz "https://github.com/kubernetes-sigs/krew/releases/latest/download/krew.tar.gz"
         curl -Lo $TEMPDIR/krew.yaml "https://github.com/kubernetes-sigs/krew/releases/latest/download/krew.yaml"
@@ -93,7 +93,7 @@ if [ "$(command -v kubectl 2>/dev/null)" != "$PROJECT_ROOT/tools/kubectl" ]; the
         mv $TEMPDIR/krew-linux_amd64 $PROJECT_ROOT/tools/bin/krew
         chmod +x $PROJECT_ROOT/tools/bin/krew
         krew install --manifest=$TEMPDIR/krew.yaml --archive=$TEMPDIR/krew.tar.gz
-        info "Installing kubectl plugins ctx, ns"
+        info "installing kubectl plugins ctx, ns"
         kubectl krew install ctx
         kubectl krew install ns
         rm -rf $TEMPDIR
@@ -103,14 +103,12 @@ if [ "$(command -v kubectl 2>/dev/null)" != "$PROJECT_ROOT/tools/kubectl" ]; the
     export AWS_SECRET_ACCESS_KEY="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yml | yq -r .credentials.aws.fedora.secret_key)"
     export AWS_DEFAULT_REGION="us-east-1"
 
-    info "Set up AWS credentials"
+    info "AWS credentials"
 
     mkdir -p $PROJECT_ROOT/tools/.kube
     export KUBECONFIG="$PROJECT_ROOT/tools/.kube/config"
     touch $KUBECONFIG
 
-    info "Set up kubectl for EKS cluster 'testing-farm'"
+    info "EKS cluster 'testing-farm'"
     aws eks update-kubeconfig --name testing-farm
 fi
-
-source $(poetry env info -p)/bin/activate
