direnv: add scp, export AWS*/KUBE_CONFIG always
Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.envrc
+++ b/.envrc
@@ -75,6 +75,11 @@ fi
 #
 # download and setup kubectl
 #
+export AWS_ACCESS_KEY_ID="$(ansible-vault view --vault-password-file .vault_pass ansible/secrets/credentials.yml | yq -r .credentials.aws.fedora.access_key)"
+export AWS_SECRET_ACCESS_KEY="$(ansible-vault view --vault-password-file .vault_pass ansible/secrets/credentials.yml | yq -r .credentials.aws.fedora.secret_key)"
+export AWS_DEFAULT_REGION="us-east-1"
+export KUBECONFIG="$DIRENV_PATH/.kube/config"
+
 if [ ! -e "$DIRENV_PATH/bin/kubectl" ]; then
 
     info "install kubectl"
@@ -96,14 +101,9 @@ if [ ! -e "$DIRENV_PATH/bin/kubectl" ]; then
     krew install ns &>> $LOG
     rm -rf $TEMPDIR
 
-    export AWS_ACCESS_KEY_ID="$(ansible-vault view --vault-password-file .vault_pass ansible/secrets/credentials.yml | yq -r .credentials.aws.fedora.access_key)"
-    export AWS_SECRET_ACCESS_KEY="$(ansible-vault view --vault-password-file .vault_pass ansible/secrets/credentials.yml | yq -r .credentials.aws.fedora.secret_key)"
-    export AWS_DEFAULT_REGION="us-east-1"
-
     info "AWS credentials"
 
     mkdir -p $DIRENV_PATH/.kube
-    export KUBECONFIG="$DIRENV_PATH/.kube/config"
     touch $KUBECONFIG
 
     info "EKS cluster 'testing-farm'"
@@ -146,4 +146,7 @@ EOF
 
     echo "/usr/bin/ssh -F $PROJECT_ROOT/.direnv/ssh_config \$@" > $DIRENV_PATH/bin/ssh
     chmod +x $DIRENV_PATH/bin/ssh
+
+    echo "/usr/bin/scp -F $PROJECT_ROOT/.direnv/ssh_config \$@" > $DIRENV_PATH/bin/scp
+    chmod +x $DIRENV_PATH/bin/scp
 fi
