Add additional changes needed
* CentOS Stream 9 does not have EPEL yet
* ad some missing file and fix one obvious typo :(

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ansible/playbooks/testing-farm.yml
+++ b/ansible/playbooks/testing-farm.yml
@@ -14,6 +14,7 @@
 - hosts: testing_farm_public_workers:testing_farm_redhat_workers
   vars_files:
     - ../secrets/credentials.yml
+    - ../vars/common.yml
   pre_tasks:
     - include: ../tasks/dns.yml
       tags: update_dns
