--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yml
@@ -1,6 +1,7 @@
 - hosts: all
   tasks:
   # workarounds
+  - include_tasks: workaround-beaker-client-repo-unavailable.yml
   - include_tasks: workaround-disable-qa-tools.yml
   # IT BREAKS PYTHON TEST SUITE, for example, but for RHEL we accept it as it speeds up a lot installability in PSI Openstack
   # Disabled, as we test in AWS now anyway
