TFT-838: Add workaround for beakerlib on CentOS Stream 9
And add some missing files, remove some leftovers.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,3 +7,6 @@ nocows = True
 roles_path = ansible/roles
 stdout_callback = debug
 vault_password_file = .vault_pass
+
+[ssh_connection]
+pipelining = true
