--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/enable-powertools.yml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/enable-powertools.yml
@@ -8,3 +8,4 @@
   when:
     - 'ansible_distribution == "CentOS"'
     - 'ansible_distribution_major_version >= "8"'
+    - '"centos-stream-9" not in IMAGE_NAME|lower'
