--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/entrypoint.yml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/entrypoint.yml
@@ -5,6 +5,7 @@
   - include_tasks: workaround-fedora-release.yml
   - include_tasks: update-and-restart.yml
   - include_tasks: workaround-dns.yml
+  - include_tasks: workaround-beakerlib.yml
   - include_tasks: install-epel.yml
   - include_tasks: enable-powertools.yml
   - include_tasks: install-koji-brew.yml
