Add various changes
* sync envrc with main
* remove hide-secrets from RHEL - not available there in image yet
* fixes in playbooks found

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.envrc
+++ b/.envrc
@@ -20,8 +20,12 @@ layout_poetry() {
 #
 PROJECT_ROOT=$(pwd)
 DIRENV_PATH="$PROJECT_ROOT/.direnv"
+TOOLS="$DIRENV_PATH/bin"
 LOG="$PROJECT_ROOT/.direnv/envrc.log"
 SSH_CONFIG="$DIRENV_PATH/ssh_config"
+
+# create tools dir including .direnv early
+mkdir -p $TOOLS
 
 #
 # helpers
@@ -34,7 +38,6 @@ warn() { echo -e "\e[33m[!] $@\e[0m"; echo "[!] $@" >> $LOG; }
 #
 # sanity
 #
-mkdir -p $DIRENV_PATH
 [ -e "$PROJECT_ROOT/.vault_pass" ] || error "Please create '.vault_pass' in project root '$PROJECT_ROOT'"
 
 #
@@ -45,8 +48,8 @@ layout_poetry
 #
 # install all requirements via poetry
 #
-info "install poetry"
-poetry install
+info "install python deps"
+poetry install &>> $LOG
 
 #
 # install pre-commit
@@ -55,20 +58,19 @@ info "install pre-commit"
 pre-commit install &>> $LOG
 
 #
-# make sure bin.direnv dir exists
+# make sure bin dir exists
 #
-mkdir -p $DIRENV_PATH/bin
-PATH_add "$DIRENV_PATH/bin"
+PATH_add "$TOOLS"
 
 #
 # download helm
 #
-if [ ! -e "$DIRENV_PATH/bin/helm" ]; then
+if [ ! -e "$TOOLS/helm" ]; then
     info "install helm"
     TEMPDIR=$(mktemp -d)
     curl -sLo $TEMPDIR/helm.tar.gz https://get.helm.sh/helm-v3.2.1-linux-amd64.tar.gz
     tar -xC $TEMPDIR -f $TEMPDIR/helm.tar.gz
-    mv $TEMPDIR/linux-amd64/helm $DIRENV_PATH/bin/helm
+    mv $TEMPDIR/linux-amd64/helm $TOOLS/helm
     rm -rf $TEMPDIR
 fi
 
@@ -80,11 +82,11 @@ export AWS_SECRET_ACCESS_KEY="$(ansible-vault view --vault-password-file .vault_
 export AWS_DEFAULT_REGION="us-east-1"
 export KUBECONFIG="$DIRENV_PATH/.kube/config"
 
-if [ ! -e "$DIRENV_PATH/bin/kubectl" ]; then
+if [ ! -e "$TOOLS/kubectl" ]; then
 
     info "install kubectl"
-    curl -sLo $DIRENV_PATH/bin/kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.18.9/2020-11-02/bin/linux/amd64/kubectl
-    chmod +x $DIRENV_PATH/bin/kubectl
+    curl -sLo $TOOLS/kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.18.9/2020-11-02/bin/linux/amd64/kubectl
+    chmod +x $TOOLS/kubectl
 
     # download and install krew
     export KREW_ROOT=$DIRENV_PATH/.krew/
@@ -95,8 +97,8 @@ if [ ! -e "$DIRENV_PATH/bin/kubectl" ]; then
     curl -sLo $TEMPDIR/krew.tar.gz "https://github.com/kubernetes-sigs/krew/releases/latest/download/krew-linux_amd64.tar.gz"
     curl -sLo $TEMPDIR/krew.yaml "https://github.com/kubernetes-sigs/krew/releases/latest/download/krew.yaml"
     tar -xC $TEMPDIR -f $TEMPDIR/krew.tar.gz
-    mv $TEMPDIR/krew-linux_amd64 $DIRENV_PATH/bin/krew
-    chmod +x $DIRENV_PATH/bin/krew
+    mv $TEMPDIR/krew-linux_amd64 $TOOLS/krew
+    chmod +x $TOOLS/krew
     krew install ctx &>> $LOG
     krew install ns &>> $LOG
     rm -rf $TEMPDIR
@@ -144,9 +146,9 @@ Host $host
 EOF
     done
 
-    echo "/usr/bin/ssh -F $PROJECT_ROOT/.direnv/ssh_config \$@" > $DIRENV_PATH/bin/ssh
-    chmod +x $DIRENV_PATH/bin/ssh
+    echo "/usr/bin/ssh -F $PROJECT_ROOT/.direnv/ssh_config \$@" > $TOOLS/ssh
+    chmod +x $TOOLS/ssh
 
-    echo "/usr/bin/scp -F $PROJECT_ROOT/.direnv/ssh_config \$@" > $DIRENV_PATH/bin/scp
-    chmod +x $DIRENV_PATH/bin/scp
+    echo "/usr/bin/scp -F $PROJECT_ROOT/.direnv/ssh_config \$@" > $TOOLS/scp
+    chmod +x $TOOLS/scp
 fi
