--- a/ansible/group_vars/testing_farm_public_workers.yml
+++ b/ansible/group_vars/testing_farm_public_workers.yml
@@ -1,5 +1,5 @@
 # container image with citool and modules
-citool_container_image: quay.io/testing-farm/gluetool-modules:testing-farm-demo
+citool_container_image: quay.io/testing-farm/gluetool-modules:testing-farm
 
 # environment name, used to reference various environment specific configuration like
 # citool-config, artemis configuration, etc.
