--- a/ansible/tasks/jobs.yml
+++ b/ansible/tasks/jobs.yml
@@ -3,6 +3,6 @@
   become: true
   copy:
     dest: "/usr/local/bin/{{ item }}"
-    src: "{{ playbook_dir }}/nomad/{{ deployment_environment }}/{{ item }}"
+    src: "{{ root_dir }}/ranch/{{ deployment_environment }}/jobs/{{ item }}"
     mode: "a+rwx"
   with_items: "{{ jobs }}"
