.envrc: Improve logging, fix multiple issues, fix .gitlab-ci

--- a/.envrc
+++ b/.envrc
@@ -1,104 +1,106 @@
 #
-# Bootstrap all tools used for our infrastructure
+# poetry layout
 #
+layout_poetry() {
+  if [[ ! -f pyproject.toml ]]; then
+    log_error 'No pyproject.toml found. Use `poetry new` or `poetry init` to create one first.'
+    exit 2
+  fi
+
+  # create venv if it doesn't exist
+  poetry run true
+
+  export VIRTUAL_ENV=$(poetry env info --path)
+  export POETRY_ACTIVE=1
+  PATH_add "$VIRTUAL_ENV/bin"
+}
 
 #
 # vars
 #
 PROJECT_ROOT=$(pwd)
-TOOLS=${PROJECT_ROOT}/.direnv/tools
+DIRENV_PATH="$PROJECT_ROOT/.direnv"
+TOOLS="$DIRENV_PATH/bin"
+LOG="$PROJECT_ROOT/.direnv/envrc.log"
+
+# create tools dir including .direnv early
+mkdir -p $TOOLS
 
 #
 # helpers
 #
-info() { echo -e "\e[32m[+] $@\e[0m"; }
-print_error() { echo -e "\e[31m[E] $@\e[0m"; }
+info() { echo -e "\e[32m[+] $@\e[0m"; echo "[+] $@" >> $LOG; }
+print_error() { echo -e "\e[31m[E] $@\e[0m"; echo "[E] $@" >> $LOG; }
 error() { print_error $@; exit 1; }
-warn() { echo -e "\e[33m[+] $@\e[0m"; }
+warn() { echo -e "\e[33m[!] $@\e[0m"; echo "[!] $@" >> $LOG; }
 
 #
-# .vault_pass is required to be created
+# sanity
 #
-info "Checking for vault password"
 [ -e "$PROJECT_ROOT/.vault_pass" ] || error "Please create '.vault_pass' in project root '$PROJECT_ROOT'"
+
+#
+# setup poetry layout
+#
+layout_poetry
 
 #
 # install all requirements via poetry
 #
-poetry install
+info "install python deps"
+poetry install &>> $LOG
 
 #
-# enable virtualenv
+# make sure bin dir exists
 #
-source $(poetry env info -p)/bin/activate
-
-#
-# make sure bin tools dir exists
-#
-mkdir -p ${TOOLS}
-
-#
-# download kubectl
-#
-if [ ! -e "${TOOLS}/kubectl" ]; then
-    info "Downloading kubectl 1.15"
-    curl -Lo ${TOOLS}/kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.15.10/2020-02-22/bin/linux/amd64/kubectl
-    chmod +x ${TOOLS}/kubectl
-fi
+PATH_add "$TOOLS"
 
 #
 # download helm
 #
-if [ ! -e "${TOOLS}/helm" ]; then
-    info "Downloading helm 3.2.1"
+if [ ! -e "$TOOLS/helm" ]; then
+    info "install helm"
     TEMPDIR=$(mktemp -d)
-    curl -Lo $TEMPDIR/helm.tar.gz https://get.helm.sh/helm-v3.2.1-linux-amd64.tar.gz
-    tar -xvC $TEMPDIR -f $TEMPDIR/helm.tar.gz
-    mv $TEMPDIR/linux-amd64/helm ${TOOLS}/helm
+    curl -sLo $TEMPDIR/helm.tar.gz https://get.helm.sh/helm-v3.2.1-linux-amd64.tar.gz
+    tar -xC $TEMPDIR -f $TEMPDIR/helm.tar.gz
+    mv $TEMPDIR/linux-amd64/helm $TOOLS/helm
     rm -rf $TEMPDIR
 fi
 
 #
-# setup kubectl
+# download and setup kubectl
 #
-if [ "$(command -v kubectl 2>/dev/null)" != "${TOOLS}/kubectl" ]; then
+export AWS_ACCESS_KEY_ID="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yml | yq -r .credentials.aws.fedora.access_key)"
+export AWS_SECRET_ACCESS_KEY="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yml | yq -r .credentials.aws.fedora.secret_key)"
+export AWS_DEFAULT_REGION="us-east-1"
+export KUBECONFIG="$DIRENV_PATH/.kube/config"
 
-    info "Set up kubectl, krew and some nice plugins"
+if [ ! -e "$TOOLS/kubectl" ]; then
+
+    info "install kubectl"
+    curl -sLo $TOOLS/kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.18.9/2020-11-02/bin/linux/amd64/kubectl
+    chmod +x $TOOLS/kubectl
 
     # download and install krew
-    if [ ! -e "${TOOLS}/krew" ]; then
-        export KREW_ROOT=${TOOLS}/.krew/
-        export PATH=${TOOLS}/.krew/bin:$PATH
-        export PATH=${TOOLS}:$PATH
+    export KREW_ROOT=$DIRENV_PATH/.krew/
+    PATH_add $DIRENV_PATH/.krew/bin
 
-        info "Downloading and installing krew"
-        TEMPDIR=$(mktemp -d)
-        curl -Lo $TEMPDIR/krew.tar.gz "https://github.com/kubernetes-sigs/krew/releases/latest/download/krew.tar.gz"
-        curl -Lo $TEMPDIR/krew.yaml "https://github.com/kubernetes-sigs/krew/releases/latest/download/krew.yaml"
-        tar -xvC $TEMPDIR -f $TEMPDIR/krew.tar.gz
-        mv $TEMPDIR/krew-linux_amd64 ${TOOLS}/krew
-        chmod +x ${TOOLS}/krew
-        krew install --manifest=$TEMPDIR/krew.yaml --archive=$TEMPDIR/krew.tar.gz
-        info "Installing kubectl plugins ctx, ns"
-        kubectl krew install ctx
-        kubectl krew install ns
-        rm -rf $TEMPDIR
-    fi
+    info "installing krew and plugins"
+    TEMPDIR=$(mktemp -d)
+    curl -sLo $TEMPDIR/krew.tar.gz "https://github.com/kubernetes-sigs/krew/releases/latest/download/krew-linux_amd64.tar.gz"
+    curl -sLo $TEMPDIR/krew.yaml "https://github.com/kubernetes-sigs/krew/releases/latest/download/krew.yaml"
+    tar -xC $TEMPDIR -f $TEMPDIR/krew.tar.gz
+    mv $TEMPDIR/krew-linux_amd64 $TOOLS/krew
+    chmod +x $TOOLS/krew
+    krew install ctx &>> $LOG
+    krew install ns &>> $LOG
+    rm -rf $TEMPDIR
 
-    export AWS_ACCESS_KEY_ID="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yml | yq -r .credentials.aws.fedora.access_key)"
-    export AWS_SECRET_ACCESS_KEY="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yml | yq -r .credentials.aws.fedora.secret_key)"
-    export AWS_DEFAULT_REGION="us-east-1"
+    info "AWS credentials"
 
-    info "Set up AWS credentials"
-
-    mkdir -p ${TOOLS}/.kube
-    export KUBECONFIG="${TOOLS}/.kube/config"
+    mkdir -p $DIRENV_PATH/.kube
     touch $KUBECONFIG
 
-    info "Set up kubectl for EKS cluster 'testing-farm'"
-    aws eks update-kubeconfig --name testing-farm
+    info "EKS cluster 'testing-farm'"
+    aws eks update-kubeconfig --name testing-farm &>> $LOG
 fi
-
-export PATH=${TOOLS}:${PATH}
-
-unset PS1
