--- a/.envrc
+++ b/.envrc
@@ -104,3 +104,8 @@ if [ ! -e "$TOOLS/kubectl" ]; then
     info "EKS cluster 'testing-farm'"
     aws eks update-kubeconfig --name testing-farm &>> $LOG
 fi
+
+#
+# gitlab-ci-linter
+#
+export GITLAB_PRIVATE_TOKEN="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yml | yq -r .credentials.gitlab.testing_farm_bot.token)"
