--- a/.envrc
+++ b/.envrc
@@ -58,6 +58,12 @@ info "install pre-commit"
 pre-commit install &>> $LOG
 
 #
+# install ansible content
+#
+info "install ansible content"
+ansible-galaxy install -r ansible/requirements.yml &>> $LOG
+
+#
 # make sure bin dir exists
 #
 PATH_add "$TOOLS"
