--- a/ansible/playbooks/testing-farm.yml
+++ b/ansible/playbooks/testing-farm.yml
@@ -31,6 +31,11 @@
   roles:
     - name: disk
       become: true
+    - name: geerlingguy.swap
+      vars:
+        swap_file_path: /data/swapfile
+        swap_file_size_mb: "16384"
+        swap_file_state: present
     - name: nomad
       tags: update_nomad
   tasks:
