Add AWS EKS development cluster installation via Terraform

--- a/.envrc
+++ b/.envrc
@@ -106,6 +106,22 @@ if [ ! -e "$TOOLS/kubectl" ]; then
 fi
 
 #
+# download terraform
+#
+if [ ! -e "${TOOLS}/terraform" ]; then
+    info "install terraform"
+    TEMPDIR=$(mktemp -d)
+    pushd $TEMPDIR &>> $LOG
+    curl -sLo terraform.zip https://releases.hashicorp.com/terraform/1.0.9/terraform_1.0.9_linux_amd64.zip
+    unzip terraform.zip &>> $LOG
+    mv terraform ${TOOLS}/terraform
+    popd &>> $LOG
+    rm -rf $TEMPDIR
+fi
+
+export TF_VAR_cluster_name="testing-farm-dev-$USER"
+
+#
 # gitlab-ci-linter
 #
 export GITLAB_PRIVATE_TOKEN="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yml | yq -r .credentials.gitlab.testing_farm_bot.token)"
