envrc: make git diff and merge ansible vault friendly

--- a/.envrc
+++ b/.envrc
@@ -51,6 +51,14 @@ info "install python deps"
 poetry install &>> $LOG
 
 #
+# setup git goodies
+#
+if ! grep '\[include\]' .git/config &> /dev/null; then
+    info "configure git"
+    git config --local include.path ../.gitconfig &>> $LOG
+fi
+
+#
 # make sure bin dir exists
 #
 PATH_add "$TOOLS"
