Ignore errors for tag repository
While it is great to have this repo around, in case
of EOL releases it can be inaccessible. In case it is
not accesible the only thing happens is we can have
a bit more older packages around, what is not such
a mess, because Fedora is updated a lot.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/entrypoint.yml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/entrypoint.yml
@@ -10,3 +10,4 @@
   - include_tasks: enable-powertools.yml
   - include_tasks: install-koji-brew.yml
   - include_tasks: tag-repository.yml
+    ignore_errors: true
