Add more context to the previous commit
Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/entrypoint.yml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/entrypoint.yml
@@ -9,5 +9,7 @@
   - include_tasks: install-epel.yml
   - include_tasks: enable-powertools.yml
   - include_tasks: install-koji-brew.yml
+  # For EOL distros this can fail, ignore the fact tag repo is not around
+  # It is considered a nice to have, but should not fail the setup.
   - include_tasks: tag-repository.yml
     ignore_errors: true
