Revert "Detect rawhide stable repo from Bodhi"
This reverts commit 6bf3fe960763b6a2d887ed8083aa2462cde24258.

--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/tag-repository.yml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/tag-repository.yml
@@ -20,9 +20,6 @@
     # The tag repository name can be determined from the Fedora version. Detect rawhide
     # by checking for rawhide repository installed via 'fedora-repos-rawhide' rpm
     #
-    # The stable tag of rawhide is detected from Bodhi during the deployment and stored
-    # in the `rawhide-version` file. See TFT-885 for details.
-    #
     - block:
         - name: Check for rawhide
           command: "rpm -q fedora-repos-rawhide"
@@ -31,7 +28,7 @@
 
         - name: Transform build target to a tag repository name (Rawhide)
           set_fact:
-            tag_repository_name: "{{ lookup('file', 'rawhide_version') }}-build"
+            tag_repository_name: "rawhide"
           when: check_rawhide.rc == 0
 
         - name: Transform build target to a tag repository name (Fedora non-Rawhide)
