Add frinedly cname record to the eks cluster installation via Terraforn

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,6 +54,6 @@ terraform:
   rules:
     - changes:
         - secrets/credentials.yml
-        - terraform/environments/dev
-        - terraform/modules
+        - terraform/environments/dev/**/*
+        - terraform/modules/**/*
         - .envrc
