pre-artifact-installation: auto-osbuild images are CoreOS based
We must skip installation of epel and powertools there ...

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/enable-powertools.yml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/enable-powertools.yml
@@ -9,3 +9,4 @@
     - 'ansible_distribution == "CentOS"'
     - 'ansible_distribution_major_version >= "8"'
     - '"centos-stream-9" not in IMAGE_NAME|lower'
+    - '"auto-osbuild" not in IMAGE_NAME|lower'
