Add workaround for automotive
* fix yum repositories, seems $stream is not expanded correctly

* install rsync, because tmt requires it and tmt does not know a thing
  about coreos

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/entrypoint.yml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/entrypoint.yml
@@ -6,6 +6,7 @@
   - include_tasks: update-and-restart.yml
   - include_tasks: workaround-dns.yml
   - include_tasks: workaround-beakerlib.yml
+  - include_tasks: workaround-automotive.yml
   - include_tasks: install-epel.yml
   - include_tasks: enable-powertools.yml
   - include_tasks: install-koji-brew.yml
