Add create-public-worker.yml playbook for creating a new worker

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,7 +2,7 @@
 filter_plugins = ansible/filters
 force_color = True
 host_key_checking = False
-inventory = ansible/hosts.yml
+inventory = ansible/inventory
 nocows = True
 roles_path = ansible/roles
 stdout_callback = debug
@@ -10,3 +10,6 @@ vault_password_file = .vault_pass
 
 [ssh_connection]
 pipelining = true
+
+[plugins]
+enable_plugins = yaml amazon.aws.aws_ec2
