--- a/ansible/tasks/dns.yml
+++ b/ansible/tasks/dns.yml
@@ -1,16 +1,22 @@
 ---
-- name: disable systemd-resolved
-  command: "systemctl disable systemd-resolved"
+- block:
+  - name: disable systemd-resolved
+    command: "systemctl disable systemd-resolved"
 
-- name: mask systemd-resolved
-  command: "systemctl mask systemd-resolved"
+  - name: mask systemd-resolved
+    command: "systemctl mask systemd-resolved"
 
-- name: remove /etc/resolv.conf
-  command: "rm -f /etc/resolv.conf"
+  - name: remove /etc/resolv.conf
+    command: "rm -f /etc/resolv.conf"
 
-- name: replace resolve.conf
-  copy:
-    dest: /etc/resolv.conf
-    content: |
-      nameserver 8.8.8.8
-      nameserver 8.8.4.4
+  - name: restart NetworkManager
+    command: "systemctl restart NetworkManager"
+
+  - name: get /etc/resolv.conf contents
+    command: "cat /etc/resolv.conf"
+    register: resolv_conf
+
+  - name: print /etc/resolv.conf
+    debug: var=resolv_conf.stdout
+
+  become: true
